# onvifxx

./: AUTHORS  CMakeLists.txt  COPYING  INSTALL  README.md  generator.sh
cmake/: FindGSOAP.cmake
common/: CMakeLists.txt
examples/: CMakeLists.txt
examples/ws-discovery/: CMakeLists.txt  log.cpp  log.hpp  main.cpp  wsdd.cpp  wsdd.hpp
gsoap/: CMakeLists.txt
include/onvif/: remotediscovery.h
include/onvifxx/: discovery.hpp  discoverylookup.hpp  media.h  media.hpp  onvifxx.hpp  remotediscovery.h  remotediscovery.hpp
onvif/: CMakeLists.txt
sock/: CMakeLists.txt  gsoap.cpp  gsoapsock.cpp  gsoapsock.hpp  ip.cpp  ip.hpp  sock.cpp  sock.hpp  tcp.cpp  tcp.hpp  udp.cpp  udp.hpp
src/: discovery_c.cpp  discovery_s.cpp  discoverylookup_proxy.cpp  media_c.cpp  media_s.cpp  onvifxx.cpp  remotediscovery.cpp  remotediscovery_c.cpp  remotediscovery_s.cpp
tests/: CMakeLists.txt  main.cpp
wsdd/: CMakeLists.txt  discovery_c.cpp  discovery_s.cpp  discoverylookup_proxy.cpp  remotediscovery_proxy.cpp  remotediscovery_service.cpp  wsa.cpp  wsa.hpp  wsaapi.c  wsaapi.h  wsdd.c  wsdd.cpp  wsdd.h  wsdd.hpp  wsdd.nsmap  wsddC.c  wsddClient.c  wsddH.h  wsddServer.c  wsddStub.h  wsddapi.c  wsddapi.h
xml/: CMakeLists.txt  event.wsdl  imaging.wsdl  media.wsdl  onvif.xsd  ptz.wsdl  xsd.xslt
